--- a/Cliente_web/Cliente_webFront/src/app/login/login.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/login/login.component.css
@@ -1,14 +1,37 @@
+/*Imagen de fondo*/
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120vh; /* altura de la ventana */
+  background-image: url('https://eyrabooks.com/uploads/blog_posts/banners/17b1494bfafe69ae39fb045fe9f4ab20.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: -10px;
+  padding: 0;
+}
+
 /* Contenedor general del login */
 .login-container {
   width: 100%;
   max-width: 400px;
   margin: 0 auto;
-  margin-top: 13vh; /* Espaciado para centrar verticalmente */
-  background-color: #fff;
+  margin-top: -5vh; /*Margen vertical*/
+  background-color: #e8cb9a; /*#e8cb9a*/
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
+}
+
+.main-title {
+  color: #3c3c3c;
+}
+
+.main-title-small {
+  color: #515151;
+  font-size: 17px;
 }
 
 /* Espacio del logo */
@@ -45,7 +68,7 @@ input {
   width: 100%;
   padding: 10px;
   font-size: 14px;
-  border: 1px solid #ccc;
+  border: 1px solid #555;/*Este son los bordes de los boxes*/
   border-radius: 5px;
   box-sizing: border-box;
 }
@@ -54,7 +77,7 @@ input {
 .btn-login {
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #00c800;
   color: white;
   border: none;
   border-radius: 5px;
@@ -98,10 +121,13 @@ input {
 .toggle-password {
   background: none;
   border: none;
-  color: #007bff;
-  font-size: 12px;
+  padding: 0;
   cursor: pointer;
-  padding: 0 10px;
+}
+
+.eye-icon {
+  width: 30px; /* Ajusta el tamaño del ícono del ojo */
+  height: 30px;
 }
 
 .toggle-password:hover {
@@ -116,7 +142,7 @@ input {
 
 /* Imagen del logo */
 .logo-image {
-  max-width: 80%; /* Ajusta el ancho máximo para que no desborde */
-  height: auto; /* Mantiene las proporciones */
-  border-radius: 5px; /* Opcional: esquinas redondeadas */
+  max-width: 60%;
+  height: auto;
+  border-radius: 5px;
 }
