--- a/Cliente_web/Cliente_webFront/src/app/login/login.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="login-container">
-  <h1>Página de Contratos de la Municipalidad</h1>
-  <h3>Iniciar Sesión</h3>
+
+  <h1 class="main-title" style="font-size: 32px">Página de Contratos de la Municipalidad</h1>
+
+  <h3 class="main-title" style="font-size: 24px">Inicio de Sesión</h3>
+
   <form (ngSubmit)="onLogin()">
 
     <!-- Imagen que se muestra en el front-->
@@ -13,7 +16,7 @@
 
     <!-- Campos de texto que debe ingresar el usuario-->
     <div class="form-group">
-      <label for="user">Nombre de Usuario</label>
+      <label class="main-title-small" for="user">Nombre de Usuario:</label>
       <input
         type="user"
         id="user"
@@ -24,7 +27,7 @@
     </div>
 
     <div class="form-group password-group">
-      <label for="password">Contraseña</label>
+      <label class="main-title-small" for="password">Contraseña:</label>
       <div class="password-container">
         <input
           type="{{ showPassword ? 'text' : 'password' }}"
@@ -32,9 +35,14 @@
           [(ngModel)]="password"
           name="password"
           placeholder="Ingrese su contraseña"
-          required>
+          required
+        />
         <button type="button" class="toggle-password" (click)="togglePassword()">
-          {{ showPassword ? 'Ocultar' : 'Mostrar' }}
+          <img
+            [src]="showPassword ? 'https://cdn-icons-png.flaticon.com/512/6684/6684701.png' : 'https://cdn-icons-png.flaticon.com/512/6405/6405909.png'"
+            alt="Mostrar/Ocultar"
+            class="eye-icon"
+          />
         </button>
       </div>
     </div>
