Creando la Página principal
+Se trabajó en el entorno de trabajo de la página principal
+Se crearon distintos componentes para cada uno de las distintas opciones (hasta el momento son 6, pero puede que necesiten ser borradas posteriormente)
+Se crearon las rutas, por lo que dentro de la página es navegable en su totalidad, al menos en las opciones creadas

--- a/Cliente_web/Cliente_webFront/src/app/login/login.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/login/login.component.css
@@ -137,7 +137,7 @@ input {
 /* Contenedor del logo */
 .logo-container {
   margin-bottom: 20px;
-  text-align: center; /* Centrar el logo */
+  text-align: center;
 }
 
 /* Imagen del logo */
