Trabajando en la página principal
+Se crearon 3 nuevas opciones para que se vea más completo la página
+Se arregló el problema de que la página se iniciará en la opción de contratos, ahora inicia en la página principal
+Se arreglaron la posición de los botones del header
+Ahora el header muestra correctamente en que pestaña se encuentra el usuario en cada momento
+

--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -40,21 +40,27 @@
       <div class="search-box">
         <input type="text" placeholder="Buscar..." />
         <button>🔍</button>
+        <div style="width: 50px"></div>
       </div>
       <div class="user-buttons">
-        <button>Usuario</button>
-        <button>Ajustes</button>
-        <button>Notificaciones</button>
+        <button>Usuario 👤</button>
+        <button>Ajustes ⚙️</button>
+        <button>Notificaciones 🔔</button>
       </div>
     </header>
 
 
+    <!-- Página principal en blanco-->
+    <div *ngIf="currentRoute === '/principalPage'">
+      <h1 style="margin-left: 20px;">
+        Bienvenido, esta es la página principal
+      </h1>
+    </div>
 
     <!-- Contenido dinámico -->
     <main class="dynamic-content">
       <router-outlet></router-outlet>
     </main>
-
 
     <!-- Footer -->
     <footer class="footer">
