--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 20px;
   background-color: #ddd;
 }
 
@@ -86,5 +86,12 @@
   gap: 4px;
   font-size: 25px;
   width: 70%;
+}
+
+.user-buttons {
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
 }
 
