Arreglando las rutas de la página principal
+En la pantalla principal se borraron los componentes de opción de 1 a 5, en lugar de ello fueron creados los componentes respectivos que posteriormente serán utilizados
+Solo para demostración fue creado un nuevo componente el cual tiene el nombre de "Opción 7", el cual será cambiado posteriormente por la opción real

--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -12,12 +12,14 @@
     <div style="height: 20px;"></div>
 
 
-    <button routerLink="/principalPage/opcion1">Contratos</button>
-    <button routerLink="/principalPage/opcion2">Proveedores</button>
-    <button routerLink="/principalPage/opcion3">Documentos</button>
-    <button routerLink="/principalPage/opcion4">OITs</button>
-    <button routerLink="/principalPage/opcion5">Reprecentantes</button>
-    <button routerLink="/principalPage/opcion6">Opción 6</button>
+    <button routerLink="/principalPage/Contratos">Contratos</button>
+    <button routerLink="/principalPage/Proveedores">Proveedores</button>
+    <button routerLink="/principalPage/Documentos">Documentos</button>
+    <button routerLink="/principalPage/OIT">OITs</button>
+    <button routerLink="/principalPage/Representantes">Reprecentantes</button>
+    <button routerLink="/principalPage/Opcion6">Opción 6</button>
+    <button routerLink="/principalPage/Opcion7">Opción 7</button>
+
   </aside>
 
   <!-- Contenido principal -->
