--- a/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.html
@@ -1,9 +1,17 @@
-<header class="search-bar">
-  <h1>Esta es la pantalla de carga de los ajustes</h1>
+<div class="main-container">
+  <header class="search-bar">
+    <h1>Ajustes de Usuario </h1>
+    <button class="buttons" routerLink="/principalPage">Volver Principal</button>
+  </header>
 
-  <button routerLink = '/principalPage'> Volver principal </button>
-</header>
+  <div class="content">
+    <p>Este solo es otro print de prueba</p>
+    <h3>Al igual que este</h3>
+  </div>
 
-<p>Este solo es otro print de prueba</p>
+  <footer class="footer">
+    <p>Footer</p>
+    <h3>Este es el pie de página</h3>
+  </footer>
+</div>
 
-<h3>Al igual que este, pero en ajustes</h3>
