--- a/Cliente_web/Cliente_webFront/src/app/login/login.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/login/login.component.css
@@ -18,7 +18,7 @@
   max-width: 400px;
   margin: 0 auto;
   margin-top: -5vh; /*Margen vertical*/
-  background-color: #9bb7eb; /*Color del recuadro del login*/ /* #dfe5f1 */
+  background-color: #fcdd35; /*Color del recuadro del login*/ /* #dfe5f1 */
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
