--- a/Cliente_web/Cliente_webFront/src/app/representantes/representantes.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/representantes/representantes.component.html
@@ -1,4 +1,4 @@
-<h2>OITs</h2>
-<p>Contenido de la opción de OITs</p>
+<h2>Representantes</h2>
+<p>Contenido de la opción de Representantes</p>
 
-<h1>Posteriormente aqui estará todo lo relacionado con los OITs de la municipalidad</h1>
+<p>Posteriormente aqui estará lo relacionado con todos los representantes</p>
