--- a/Cliente_web/Cliente_webFront/src/app/notificaciones/notificaciones.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/notificaciones/notificaciones.component.html
@@ -1,11 +1,17 @@
-<header class="search-bar">
-  <h1>Esta es la pantalla de carga de las notificaciones del usuario</h1>
+<div class="main-container">
+  <header class="search-bar">
+    <h1>Notificaciones del Usuario </h1>
+    <button class="buttons" routerLink="/principalPage">Volver Principal</button>
+  </header>
 
-  <button routerLink = '/principalPage'> Volver </button>
-</header>
+  <div class="content">
+    <p>Este solo es otro print de prueba</p>
+    <h3>Al igual que este</h3>
+  </div>
 
-
-<p>Este solo es otro print de prueba</p>
-
-<h3>Al igual que este, pero en notificaciones</h3>
+  <footer class="footer">
+    <p>Footer</p>
+    <h3>Este es el pie de página</h3>
+  </footer>
+</div>
 
