--- a/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
@@ -1,4 +1,6 @@
-<h2>Representantes</h2>
-<p>Contenido de la opción de Representantes</p>
+<h2>OITs</h2>
+<p>Contenido de la opción de OITs</p>
 
-<p>Posteriormente aqui estará lo relacionado con todos los representantes</p>
+<h1>Posteriormente aqui estará todo lo relacionado con los OITs de la municipalidad</h1>
+
+
