--- a/Cliente_web/Cliente_webFront/src/app/usuario/usuario.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/usuario/usuario.component.css
@@ -3,5 +3,46 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  background-color: #ddd;
+  background-color: #2E8B57; /* Fondo verde primario */ /*#2E8B57  #3CB371*/
+  color: #FFFFFF; /* Texto blanco */
+}
+
+.buttons {
+  display: block;
+  margin-bottom: 10px; /* Espaciado inferior */
+  padding: 10px 15px; /* Ajustar el padding para más espacio */
+  text-align: center; /* Centrar el texto */
+  font-family: 'Arial', sans-serif; /* Fuente sencilla y profesional */
+  font-size: 14px; /* Tamaño del texto */
+  font-weight: bold; /* Texto más visible */
+  background-color: #FFD700; /* Fondo amarillo dorado */
+  color: #000000; /* Texto negro */
+  border: none; /* Sin bordes */
+  border-radius: 20px; /* Bordes redondeados */
+  cursor: pointer; /* Cambia el cursor al pasar por encima */
+  transition: background-color 0.3s ease, color 0.3s ease; /* Suavidad en los cambios de color */
+}
+
+.search-bar button:hover {
+  background-color: #FFFACD; /* Fondo amarillo suave al pasar el mouse */
+  color: #2E8B57; /* Texto verde oscuro en hover */
+}
+
+/* Estilo general para que el footer siempre esté al pie */
+.main-container {
+  display: flex;
+  flex-direction: column; /* Organiza en columnas */
+  min-height: 100vh; /* Ocupa toda la altura de la ventana */
+}
+
+.content {
+  flex: 1; /* Este toma el espacio restante */
+}
+
+.footer {
+  background-color: #2E8B57; /* Fondo verde oscuro */
+  color: #FFFFFF; /* Texto blanco */
+  text-align: center; /* Centrado */
+  padding: 20px;
+  border-top: 5px solid #FFD700; /* Borde superior amarillo dorado */
 }
