--- a/Cliente_web/Cliente_webFront/src/app/usuario/usuario.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/usuario/usuario.component.html
@@ -1,12 +1,17 @@
-<header class="search-bar">
-  <h1>Esta es la pantalla de carga del usuario</h1>
+<div class="main-container">
+  <header class="search-bar">
+    <h1>Gestionar tu cuenta de usuario: [Nombre del usuario loggeado]</h1>
+    <button class="buttons" routerLink="/principalPage">Volver</button>
+  </header>
 
-  <button routerLink = '/principalPage'> Volver </button>
-</header>
+  <div class="content">
+    <p>Este solo es otro print de prueba</p>
+    <h3>Al igual que este</h3>
+    <button routerLink="/login" class="buttons">Cerrar Sesión</button>
+  </div>
 
-
-<p>Este solo es otro print de prueba</p>
-
-<h3>Al igual que este</h3>
-
-<button routerLink = '/login'> Cerrar Sesión </button>
+  <footer class="footer">
+    <p>Footer</p>
+    <h3>Este es el pie de página</h3>
+  </footer>
+</div>
