Estilizando la página
+Se borraron los márgenes blancos que habían en cada una de las pestañas
+Se cambiaron los tipos de letra
+Se cambió todo el login para que se vea más formal y presentable

--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -1,4 +1,4 @@
-<h2>Documentos</h2>
+<h1>Documentos</h1>
 <p>Contenido de la opción de Documentos</p>
 
-<h5>Aqui estára todo lo relacionado con los documentos existentes</h5>
+<p>Aqui estára todo lo relacionado con los documentos existentes</p>
