--- a/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
@@ -1,6 +1,6 @@
-<h2>OITs</h2>
+<h1>OITs</h1>
 <p>Contenido de la opción de OITs</p>
 
-<h1>Posteriormente aqui estará todo lo relacionado con los OITs de la municipalidad</h1>
+<p>Posteriormente aqui estará todo lo relacionado con los OITs de la municipalidad</p>
 
 
