--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
@@ -1,4 +1,4 @@
-<h2>Proveedores</h2>
+<h1>Proveedores</h1>
 <p>Contenido de la opción de Proveedores</p>
 
-<h1> Aqui estará todo lo de proveedores</h1>
+<p> Aqui estará todo lo de proveedores</p>
