--- a/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/ajustes/ajustes.component.css
@@ -4,35 +4,35 @@
   justify-content: space-between;
   padding: 20px;
   background-color: #2E8B57; /* Fondo verde primario */ /*#2E8B57  #3CB371*/
-  color: #FFFFFF; /* Texto blanco */
+  color: #FFFFFF;
+  margin:-10px;
 }
 
 .buttons {
   display: block;
   margin-bottom: 10px; /* Espaciado inferior */
-  padding: 10px 15px; /* Ajustar el padding para más espacio */
+  padding: 10px 15px;
   text-align: center; /* Centrar el texto */
-  font-family: 'Arial', sans-serif; /* Fuente sencilla y profesional */
-  font-size: 14px; /* Tamaño del texto */
-  font-weight: bold; /* Texto más visible */
-  background-color: #FFD700; /* Fondo amarillo dorado */
-  color: #000000; /* Texto negro */
-  border: none; /* Sin bordes */
-  border-radius: 20px; /* Bordes redondeados */
+  font-family: 'Arial', sans-serif;
+  font-size: 14px;
+  font-weight: bold; /* Texto en negrita */
+  background-color: #FFD700;
+  color: #000000;
+  border: none;
+  border-radius: 20px;
   cursor: pointer; /* Cambia el cursor al pasar por encima */
-  transition: background-color 0.3s ease, color 0.3s ease; /* Suavidad en los cambios de color */
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .search-bar button:hover {
   background-color: #FFFACD; /* Fondo amarillo suave al pasar el mouse */
-  color: #2E8B57; /* Texto verde oscuro en hover */
+  color: #2E8B57;
 }
 
-/* Estilo general para que el footer siempre esté al pie */
 .main-container {
   display: flex;
-  flex-direction: column; /* Organiza en columnas */
-  min-height: 100vh; /* Ocupa toda la altura de la ventana */
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .content {
@@ -40,9 +40,10 @@
 }
 
 .footer {
-  background-color: #2E8B57; /* Fondo verde oscuro */
-  color: #FFFFFF; /* Texto blanco */
-  text-align: center; /* Centrado */
+  background-color: #2E8B57;
+  color: #FFFFFF;
+  text-align: center;
   padding: 20px;
-  border-top: 5px solid #FFD700; /* Borde superior amarillo dorado */
+  border-top: 5px solid #FFD700;
+  margin: -10px;
 }
