--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
@@ -1,12 +1,17 @@
 .main-layout {
   display: flex;
   height: 100vh;
+  margin:-10px;
+  padding: 0;
 }
 
 .dashboard {
   width: 300px;
   background-color: #3CB371;
   padding: 20px;
+  margin:0;
+  font-family: 'Times New Roman', Times, serif;
+
 }
 
 .dashboard .logo {
@@ -40,6 +45,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  margin:0;
 }
 
 .search-bar {
