--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -8,7 +8,7 @@
       class="logo-image">
 
     <div style="height: 20px;"></div>
-    <div style="font-size: 20px; color: white"  >Opciones a elección: </div>
+    <div style="font-size: 25px;font-weight: bold; color: white"  >Opciones a elección: </div>
     <div style="height: 20px;"></div>
 
 
