Creando las tablas
+Para cada componente de las 5 opciones existentes fue creada una tabla en la que trabajar posteriormente, en donde se le estilizó para que se viera bien
+Se crearon los combo box y botones de navegación para cada componente
+De momento la página más avanzada es la de Contratos aunque la idea es que las 5 queden finalizadas para hoy

--- a/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
@@ -1,4 +1,496 @@
 <h1>Contratos</h1>
-<p>Contenido de la opción de Contratos</p>
 
-<p>Posteriormente aqui estará todo lo relacionado con los contratos</p>
+<div style="display: flex; align-items: center; gap: 30px;">
+  <div>
+    <label for="opciones" style="margin-right: 10px;">Selecciona una opción:</label>
+    <select id="opciones" name="opciones" class="combo-box">
+      <option value="opcion1">Rut</option>
+      <option value="opcion2">Razón Social</option>
+      <option value="opcion3">Dirección</option>
+      <option value="opcion4">Teléfono</option>
+      <option value="opcion5">Correo</option>
+      <option value="opcion6">Representante</option>
+    </select>
+  </div>
+  <div>
+    <label for="opciones2" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
+    <select id="opciones2" name="opciones2" class="combo-box">
+      <option value="opcion1">De Primero al Último</option>
+      <option value="opcion2">De Último al primero</option>
+    </select>
+  </div>
+  <button class="combo-box">Buscar</button>
+</div>
+
+<div style="height: 20px"></div>
+
+<table>
+  <thead>
+  <tr class="encabezado">
+    <td>Nombre del contrato</td>
+    <td>Fecha de inicio</td>
+    <td>Fecha de término</td>
+    <td>Proveedor</td>
+    <td>Acceso</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  </thead>
+</table>
+
+<div style="height: 20px"></div>
+
+<div style="display: flex; justify-content: space-between; width: 100%;">
+  <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
+  <button class="buttons" style="flex: 1;">Página Siguiente</button>
+</div>
+
