--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -1,4 +1,500 @@
 <h1>Documentos</h1>
-<p>Contenido de la opción de Documentos</p>
 
-<p>Aqui estára todo lo relacionado con los documentos existentes</p>
+<div style="display: flex; align-items: center; gap: 150px;">
+  <div>
+    <label for="opciones" style="margin-right: 10px;">Selecciona una opción:</label>
+    <select id="opciones" name="opciones">
+      <option value="opcion1">Nombre</option>
+      <option value="opcion2">Fecha de subida</option>
+      <option value="opcion3">Hora de Subida</option>
+      <option value="opcion4">Tipo de documento</option>
+      <option value="opcion5">Contrato</option>
+      <option value="opcion7">Estado</option>
+    </select>
+  </div>
+
+  <div>
+    <label for="opciones2" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
+    <select id="opciones2" name="opciones">
+      <option value="opcion1">De mayor a menor</option>
+      <option value="opcion2">De menor a mayor</option>
+    </select>
+  </div>
+</div>
+
+<div style="height: 20px"></div>
+
+
+<table>
+  <thead>
+  <tr class="encabezado">
+    <td>Nombre</td>
+    <td>Fecha de subida</td>
+    <td>Hora de Subida</td>
+    <td>Tipo de documento</td>
+    <td>Contrato</td>
+    <td>Estado</td>
+    <td>Acceso</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+
+  </thead>
+</table>
+
+<div style="height: 20px"></div>
+
+<div style="display: flex; justify-content: space-between; width: 100%;">
+  <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
+  <button class="buttons" style="flex: 1;">Página Siguiente</button>
+</div>
