--- a/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
@@ -1,6 +1,502 @@
 <h1>OITs</h1>
-<p>Contenido de la opción de OITs</p>
 
-<p>Posteriormente aqui estará todo lo relacionado con los OITs de la municipalidad</p>
+<div style="display: flex; align-items: center; gap: 150px;">
+  <div>
+    <label for="opciones" style="margin-right: 10px;">Selecciona una opción:</label>
+    <select id="opciones" name="opciones">
+      <option value="opcion1">Rut</option>
+      <option value="opcion2">Razón Social</option>
+      <option value="opcion3">Dirección</option>
+      <option value="opcion4">Teléfono</option>
+      <option value="opcion5">Correo</option>
+      <option value="opcion6">Representante</option>
+      <option value="opcion7">Estado</option>
+    </select>
+  </div>
+
+  <div>
+    <label for="opciones2" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
+    <select id="opciones2" name="opciones">
+      <option value="opcion1">De mayor a menor</option>
+      <option value="opcion2">De menor a mayor</option>
+    </select>
+  </div>
+</div>
+
+<div style="height: 20px"></div>
 
 
+<table>
+  <thead>
+  <tr class="encabezado">
+    <td>RUT</td>
+    <td>Razón Social</td>
+    <td>Dirección</td>
+    <td>Teléfono</td>
+    <td>Correo</td>
+    <td>Repesentante</td>
+    <td>Estado</td>
+    <td>Acceso</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 1</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3 </td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 6</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 7</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 8</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 9</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+  <tr>
+    <td>Mostrando algo 10</td>
+    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 3</td>
+    <td>Mostrando algo 4</td>
+    <td>Mostrando algo 5</td>
+    <td>Mostrando algo 6</td>
+  </tr>
+
+
+  </thead>
+</table>
+
+<div style="height: 20px"></div>
+
+<div style="display: flex; justify-content: space-between; width: 100%;">
+  <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
+  <button class="buttons" style="flex: 1;">Página Siguiente</button>
+</div>
