--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
@@ -6,12 +6,12 @@
 }
 
 .dashboard {
-  width: 300px;
+  width: 300px; /* Mantiene el ancho fijo del dashboard */
   background-color: #3CB371;
   padding: 20px;
-  margin:0;
+  margin: 0;
   font-family: 'Times New Roman', Times, serif;
-
+  height: auto;
 }
 
 .dashboard .logo {
