--- a/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/documentos/documentos.component.html
@@ -1,25 +1,24 @@
 <h1>Documentos</h1>
 
-<div style="display: flex; align-items: center; gap: 150px;">
+<div style="display: flex; align-items: center; gap: 30px;">
   <div>
     <label for="opciones" style="margin-right: 10px;">Selecciona una opción:</label>
-    <select id="opciones" name="opciones">
+    <select id="opciones" name="opciones" class="combo-box">
       <option value="opcion1">Nombre</option>
       <option value="opcion2">Fecha de subida</option>
       <option value="opcion3">Hora de Subida</option>
       <option value="opcion4">Tipo de documento</option>
       <option value="opcion5">Contrato</option>
-      <option value="opcion7">Estado</option>
     </select>
   </div>
-
   <div>
     <label for="opciones2" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
-    <select id="opciones2" name="opciones">
-      <option value="opcion1">De mayor a menor</option>
-      <option value="opcion2">De menor a mayor</option>
+    <select id="opciones2" name="opciones" class="combo-box">
+      <option value="opcion1">De Primero al Último</option>
+      <option value="opcion2">De Último al Primero</option>
     </select>
   </div>
+  <button class="combo-box">Buscar</button>
 </div>
 
 <div style="height: 20px"></div>
@@ -33,7 +32,6 @@
     <td>Hora de Subida</td>
     <td>Tipo de documento</td>
     <td>Contrato</td>
-    <td>Estado</td>
     <td>Acceso</td>
   </tr>
 
