--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
@@ -3,24 +3,23 @@
 <div style="display: flex; align-items: center; gap: 150px;">
   <div>
     <label for="opciones" style="margin-right: 10px;">Selecciona una opción:</label>
-    <select id="opciones" name="opciones">
+    <select id="opciones" name="opciones" class="combo-box">
       <option value="opcion1">Rut</option>
       <option value="opcion2">Razón Social</option>
       <option value="opcion3">Dirección</option>
       <option value="opcion4">Teléfono</option>
       <option value="opcion5">Correo</option>
       <option value="opcion6">Representante</option>
-      <option value="opcion7">Estado</option>
     </select>
   </div>
-
   <div>
     <label for="opciones2" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
-    <select id="opciones2" name="opciones">
-      <option value="opcion1">De mayor a menor</option>
-      <option value="opcion2">De menor a mayor</option>
+    <select id="opciones2" name="opciones" class="combo-box">
+      <option value="opcion1">De Primero al Último</option>
+      <option value="opcion2">De Último al Primero</option>
     </select>
   </div>
+  <button class="combo-box">Buscar</button>
 </div>
 
 <div style="height: 20px"></div>
@@ -35,7 +34,6 @@
     <td>Teléfono</td>
     <td>Correo</td>
     <td>Repesentante</td>
-    <td>Estado</td>
     <td>Acceso</td>
   </tr>
 
