--- a/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
@@ -4,13 +4,11 @@
   <div>
     <label for="opciones" style="margin-right: 10px;">Selecciona una opción:</label>
     <select id="opciones" name="opciones" class="combo-box">
-      <option value="opcion1">Rut</option>
-      <option value="opcion2">Razón Social</option>
-      <option value="opcion3">Dirección</option>
-      <option value="opcion4">Teléfono</option>
-      <option value="opcion5">Correo</option>
-      <option value="opcion6">Representante</option>
-    </select>
+      <option value="opcion1">Nombre</option>
+      <option value="opcion2">Fecha de Inicio</option>
+      <option value="opcion3">Fecha de Término</option>
+      <option value="opcion4">Proveedor</option>
+      </select>
   </div>
   <div>
     <label for="opciones2" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
@@ -39,8 +37,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -48,8 +44,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
   </tr>
 
   <tr>
@@ -57,8 +51,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -66,8 +58,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -75,8 +65,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -84,8 +72,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -93,8 +79,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -102,8 +86,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -111,8 +93,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -120,8 +100,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -129,8 +107,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -138,8 +114,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
   </tr>
 
   <tr>
@@ -147,8 +121,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -156,8 +128,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -165,8 +135,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -174,8 +142,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -183,8 +149,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -192,8 +156,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -201,8 +163,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -210,17 +170,11 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
+  </tr><tr>
     <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -228,8 +182,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
   </tr>
 
   <tr>
@@ -237,8 +189,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -246,8 +196,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -255,8 +203,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -264,8 +210,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -273,8 +217,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -282,8 +224,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -291,8 +231,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -300,17 +238,11 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
+  </tr><tr>
     <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -318,8 +250,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
   </tr>
 
   <tr>
@@ -327,17 +257,13 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
+    <td>Mostrando algo 2 con mayor saracatunga</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -345,8 +271,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -354,8 +278,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -363,8 +285,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -372,8 +292,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -381,8 +299,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -390,17 +306,11 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
+  </tr><tr>
     <td>Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o no Mostrando algo un poco mas largo para ver si esta bien o no</td>
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -408,8 +318,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
   </tr>
 
   <tr>
@@ -417,8 +325,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3 Mostrando algo 6 Mostrando algo un poco mas largo para ver si esta bien o noMostrando algo un poco mas largo para ver si esta bien o noMostrando</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -426,8 +332,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -435,8 +339,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -444,8 +346,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -453,8 +353,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -462,8 +360,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -471,8 +367,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   <tr>
@@ -480,8 +374,6 @@
     <td>Mostrando algo 2</td>
     <td>Mostrando algo 3</td>
     <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
   </tr>
 
   </thead>
